# 19_CampusPushUp

./: .gitignore  ACV_Classifier_Fonctions.py  Dockerfile  README.md  classifier.pkl  classifier_yoga.pkl  environment.yaml  environment.yml  landmark_positions.csv  landmark_positions_yoga.csv  model_training.ipynb  model_training_push-up.ipynb  model_training_push-up_emmanuel.ipynb  model_training_yoga.ipynb  model_training_yoga_emmanuel.ipynb  push-up_classifier.pkl  pushup_data.csv  pyproject.toml  run.py  run_with_devices.sh  run_yoga.py  yoga_classifier.pkl
PoseClassification/: visualize.py
embeddings/: features_list.csv  pushup_2a_2d_embeddings.csv  pushup_2a_4d_embeddings.csv  pushup_2a_embeddings.csv  pushup_4d_8a_embeddings.csv  pushup_all_embeddings.csv  pushup_both_sides_embeddings.csv  pushup_left_side_embeddings.csv  pushup_right_side_embeddings.csv  yoga_all_embeddings.csv  yoga_positions.csv
models/: push-up_classifier.pkl  push-up_landmark_positions.csv  push-up_landmark_positions_2.csv  pushup_2a_2d_DecisionTreeClassifier.pkl  pushup_2a_4d_DecisionTreeClassifier.pkl  pushup_2a_DecisionTreeClassifier.pkl  pushup_4d_8a_DecisionTreeClassifier.pkl  pushup_all_DecisionTreeClassifier.pkl  pushup_both_sides_DecisionTreeClassifier.pkl  pushup_both_sides_classifier.pkl  pushup_left_side_DecisionTreeClassifier.pkl  pushup_right_side_DecisionTreeClassifier.pkl  yoga_all_DecisionTreeClassifier.pkl  yoga_classifier.pkl  yoga_landmark_positions.csv
old/: model_training_yoga.ipynb
