[project]
name = "project-04-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "git_emmanuel",email = "e.virot.phd+git@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12" 
dependencies = [
    "numpy (>=1.21.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (==1.5.2)"
]

 
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ensure there is no conflict in package configuration
# [tool.poetry]
# name = "project_poetry_wheel"
# version = "0.1.0"
# description = ""
# authors = ["git_emmanuel <e.virot.phd+git@gmail.com>"]
# packages = [
#     { include = "src/project_poetry_wheel", from = "src/project_poetry_wheel", to = "project_poetry_wheel" }
# ]

# # Include directories for non-Python files, in order to create a wheel
# [[tool.poetry.include]]
# path = "media/*"
# destination = "media"

# [[tool.poetry.include]]
# path = "models/*"
# destination = "models"
